--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.9",
+    "@vuepress/plugin-search": "2.0.0-rc.27",
+    "@waline/client": "^3.1.3",
     "vue": "^3.4.23",
     "vuepress": "2.0.0-rc.9",
     "vuepress-theme-hope": "2.0.0-rc.38"
