--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.9",
-    "@vuepress/plugin-search": "2.0.0-rc.27",
-    "@waline/client": "^3.1.3",
-    "vue": "^3.4.23",
-    "vuepress": "2.0.0-rc.9",
-    "vuepress-theme-hope": "2.0.0-rc.38"
+    "@vuepress/bundler-vite": "2.0.0-rc.18",
+    "@vuepress/plugin-google-analytics": "2.0.0-rc.54",
+    "@vuepress/plugin-search": "2.0.0-rc.55",
+    "@vuepress/plugin-watermark": "2.0.0-rc.60",
+    "@waline/client": "^3.3.2",
+    "sass-embedded": "^1.80.7",
+    "vue": "^3.5.12",
+    "vuepress": "2.0.0-rc.18",
+    "vuepress-theme-hope": "2.0.0-rc.59"
   }
 }
