--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -14,26 +14,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
 
       - name: 设置 pnpm
-        uses: pnpm/action-setup@v4
-
+        uses: pnpm/action-setup@v2
+        with:
+          run_install: true
+          version: 10
 
       - name: 设置 Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 22
+          node-version: 20
           cache: pnpm
 
-      - name: 安装依赖
-        run: |
-          corepack enable
-          pnpm install --frozen-lockfile
+      # - name: 安装依赖
+      #   run: |
+      #     corepack enable
+      #     pnpm install --frozen-lockfile
 
       - name: 构建文档
         env:
